// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declare_enum.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare const enum Foo {}
declare enum Bar {}

=====================================output=====================================
declare const enum Foo {}

declare enum Bar {}

================================================================================
`;

exports[`declare_function.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare function x();
declare function y(): void;

declare namespace A {
    function x();
    function y(): void;
}

=====================================output=====================================
declare function x();

declare function y(): void;

declare namespace A {
  function x();

  function y(): void;
}

================================================================================
`;

exports[`declare_interface.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare interface Dictionary<T> {
  [index: string]: T
}

=====================================output=====================================
declare interface Dictionary<T> {
  [index: string]: T;
}

================================================================================
`;

exports[`declare_var.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// tslint:disable-next-line:no-use-before-declare
const hello = 5;

// tslint:disable-next-line:no-use-before-declare
declare const hello = 5;

=====================================output=====================================
// tslint:disable-next-line:no-use-before-declare

const hello = 5;

// tslint:disable-next-line:no-use-before-declare

declare const hello = 5;

================================================================================
`;
